<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redoxi_shared_memory</name>
  <version>0.0.0</version>
  <description>shared memory interfaces, for loading dynamically into the node</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>json_struct</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>redoxi_basic_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
