<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_example_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>redoxi_video_reader</depend>
  <depend>redoxi_samples_lib</depend>
  <depend>redoxi_samples_nodes</depend>
  <depend>redoxi_shared_memory</depend>
  <depend>redoxi_inference</depend>
  <depend>redoxi_dnn_models</depend>
  <depend>yolo8_series</depend>
  <depend>universal_mot_trackers</depend>
  <depend>psg_private_msgs</depend>
  <depend>pluginlib</depend>

  <depend>redoxi_common_py</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
