<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_cx</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>redoxi_samples_lib</depend>
  <depend>redoxi_samples_nodes</depend>
  <depend>redoxi_video_reader</depend>
  <depend>redoxi_shared_memory</depend>
  <depend>psg_private_msgs</depend>
  <depend>psg_master_node</depend>
  <depend>psg_document_sink</depend>
  <depend>psg_detector</depend>
  <depend>psg_all_detector_cpp</depend>
  <depend>psg_pose_detector</depend>
  <depend>psg_frame_det_source_sink</depend>
  <!-- <depend>video_reader_orbbec</depend> -->
  <depend>spdlog_vendor</depend>
  <depend>pluginlib</depend>
  <depend>psg_tracker</depend>
  <depend>video_reader_from_url</depend>
  <depend>psg_person_generator</depend>
  <depend>psg_counter</depend>
  <depend>universal_mot_trackers</depend>
  <depend>psg_common_py</depend>
  <depend>psg_person_detector_cpp</depend>
  <depend>psg_tracker_sink</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
