<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_tracking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>redoxi_common_nodes</depend>
  <depend>RedoxiTrack</depend>
  <depend>json_struct</depend>
  <depend>vision_opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
